// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot when does not have failing from date 1`] = `
<span
  className="text-success"
>
  for 4 days
</span>
`;

exports[`snapshot when has failing from date 1`] = `
<span
  className="text-danger"
>
  for 10 minutes
</span>
`;
